--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
-	<title></title>
+	<title>Portfolio</title>
 </head>
 <body>
 
@@ -13,8 +13,14 @@
 		<p>Conheça um pouco mais sobre mim</p>
 	</div><!--container-->
 
+	<div class="icon">
+		<a href="https://github.com/paulodev34"><img src="imagens/git.png"></a>
+		<a href="https://www.linkedin.com/in/paulo-sergio-dev34/"><img src="imagens/linkedln.png"></a>
+		
+	</div>
+
 	<div class="container2">
-		<h1>linguagens</h1>
+		<h1>Linguagens</h1>
 	</div><!--container2-->
 
 		<div class="container3">
