--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
 	</div><!--container-->
 
 	<div class="icon">
-		<a href="https://github.com/paulodev34"><img src="imagens/git.png"></a>
-		<a href="https://www.linkedin.com/in/paulo-sergio-dev34/"><img src="imagens/linkedln.png"></a>
-		
+		<a href="#" class="icons icon--Linkedln">
+			<i class="ri-Linkedln-line"></i>
+		</a>
+
+		<a href="#" class="icons icon--github">
+			<i class="ri-github-line"></i>
+		</a>
 	</div>
 
 	<div class="container2">
