--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<link href="https://fonts.googleapis.com/css2?family=Gwendolyn:wght@700&family=Lato:ital,wght@0,900;1,900&family=Open+Sans&family=Roboto+Slab:wght@700&family=Roboto:ital,wght@1,900&display=swap" rel="stylesheet">
+
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 	<title>Portfolio</title>
 </head>
@@ -14,27 +16,37 @@
 	</div><!--container-->
 
 	<div class="icon">
-		<a href="#" class="icons icon--Linkedln">
-			<i class="ri-Linkedln-line"></i>
-		</a>
-
-		<a href="#" class="icons icon--github">
-			<i class="ri-github-line"></i>
-		</a>
-	</div>
+		<a href="https://github.com/paulodev34" ><img src="imagens/git.png" class="icon1"></a>
+		<a href="https://www.linkedin.com/in/paulo-sergio-dev34/" class="icon2" ><img src="imagens/linkedln.png"></a>
+	</div><!--icon-->
 
 	<div class="container2">
-		<h1>Linguagens</h1>
+
+		<h1>Habilidades</h1>
+		
+		<img src="imagens/habilidades.png">
+
+		<p>HTML5, CSS3, JavaScript,Banco de Dados SQL, C, Python, Realidade aumentada, C#, Construção de requisitos, Comunicação e Modelos de gestão.
+		</p>
 	</div><!--container2-->
 
-		<div class="container3">
-		<h1></h1>
+	<div class="container3">
+		<h1>Projetos</h1>
+
+		<img src="imagens/blueprint.png">
+
+		<p>
+		Calculadora de gorjetas, Landing pages, Landing pages com mosaico, Portfolio
+		</p>
 	</div><!--container2-->
 
-	<div class="clear"></div>
+	
 
 	<div class="descrisao">
-		<h1>Projetos</h1>
+		<h1>Depoimentos</h1>
+		<p>
+			
+		</p>
 	</div>
 
 </body>
