--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 		<p>Conheça um pouco mais sobre mim</p>
 	</div><!--container-->
 
-	<div class="icon">
-		<a href="https://github.com/paulodev34" ><img src="imagens/git.png" class="icon1"></a>
-		<a href="https://www.linkedin.com/in/paulo-sergio-dev34/" class="icon2" ><img src="imagens/linkedln.png"></a>
+	<div class="container-icon">
+		<a href="https://github.com/paulodev34" ><img src="imagens/git.png" ></a>
+		<a href="https://www.linkedin.com/in/paulo-sergio-dev34/"  ><img src="imagens/linkedln.png"></a>
 	</div><!--icon-->
 
 	<div class="container2">
