--- a/index.html
+++ b/index.html
@@ -1,53 +1,59 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<link href="https://fonts.googleapis.com/css2?family=Gwendolyn:wght@700&family=Lato:ital,wght@0,900;1,900&family=Open+Sans&family=Roboto+Slab:wght@700&family=Roboto:ital,wght@1,900&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="utf-8" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gwendolyn:wght@700&family=Lato:ital,wght@0,900;1,900&family=Open+Sans&family=Roboto+Slab:wght@700&family=Roboto:ital,wght@1,900&display=swap"
+      rel="stylesheet"
+    />
 
-	<link href="css/style.css" rel="stylesheet" type="text/css">
-	<title>Portfolio</title>
-</head>
-<body>
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <title>Portfolio</title>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Desenvolvedor</h1>
+      <h2>Front-End</h2>
+      <p>Conheça um pouco mais sobre mim</p>
+    </div>
+    <!--container-->
 
-	<div class="container">
-		<h1>Desenvolvedor</h1>
-		<h2>Front-End</h2>
-		<p>Conheça um pouco mais sobre mim</p>
-	</div><!--container-->
+    <div class="container-icon">
+      <a href="https://github.com/paulodev34"><img src="imagens/git.png" /></a>
+      <a href="https://www.linkedin.com/in/paulo-sergio-dev34/"
+        ><img src="imagens/linkedln.png"
+      /></a>
+    </div>
+    <!--icon-->
 
-	<div class="container-icon">
-		<a href="https://github.com/paulodev34" ><img src="imagens/git.png" ></a>
-		<a href="https://www.linkedin.com/in/paulo-sergio-dev34/"  ><img src="imagens/linkedln.png"></a>
-	</div><!--icon-->
+    <div class="container2">
+      <h1>Habilidades</h1>
 
-	<div class="container2">
+      <img src="imagens/habilidades.png" />
 
-		<h1>Habilidades</h1>
-		
-		<img src="imagens/habilidades.png">
+      <p>
+        HTML5, CSS3, JavaScript,Banco de Dados SQL, C, Python, Realidade
+        aumentada, C#, Construção de requisitos, Comunicação e Modelos de
+        gestão.
+      </p>
+    </div>
+    <!--container2-->
 
-		<p>HTML5, CSS3, JavaScript,Banco de Dados SQL, C, Python, Realidade aumentada, C#, Construção de requisitos, Comunicação e Modelos de gestão.
-		</p>
-	</div><!--container2-->
+    <div class="container3">
+      <h1>Projetos</h1>
 
-	<div class="container3">
-		<h1>Projetos</h1>
+      <img src="imagens/blueprint.png" />
 
-		<img src="imagens/blueprint.png">
+      <p>
+        Calculadora de gorjetas, Landing pages, Landing pages com mosaico,
+        Portfolio, Formulário com Validação
+      </p>
+    </div>
+    <!--container2-->
 
-		<p>
-		Calculadora de gorjetas, Landing pages, Landing pages com mosaico, Portfolio
-		</p>
-	</div><!--container2-->
-
-	
-
-	<div class="descrisao">
-		<h1>Depoimentos</h1>
-		<p>
-			
-		</p>
-	</div>
-
-</body>
+    <div class="descrisao">
+      <h1>Depoimentos</h1>
+      <p></p>
+    </div>
+  </body>
 </html>
